--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.73.5",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
