--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.28",
     "@types/react": "~18.2.45",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "axios": "^1.6.8",
     "expo": "~50.0.13",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
