fixed no images

--- a/app.json
+++ b/app.json
@@ -9,6 +9,8 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
+      "width": 30,
+      "height": 30,
       "backgroundColor": "#000000"
     },
     "assetBundlePatterns": [
